--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,4 @@ browser=chrome
 team_name=lions
 amazon_title=amazon
 orange_app_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+rental_home_url=https://www.bluerentalcars.com/
